Changes to add transaction

--- a/MyWebsite/Views/Account/Login.cshtml
+++ b/MyWebsite/Views/Account/Login.cshtml
@@ -31,7 +31,7 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <button type="submit" class="waves-effect waves-light btn red accent-4 redButton">Log in</button>
+                    <button type="submit" class="waves-effect waves-light btn red accent-4 sharpCorners">Log in</button>
                 </div>
                 <div class="form-group">
                     <p style="font-size:20px;"><a asp-action="ForgotPassword">Forgot your password?</a></p>
@@ -78,7 +78,7 @@
 }
 
 <style>
-    .redButton{
+    .sharpCorners{
         border-radius: 0px !important;
     }
 
