--- a/MyWebsite/Views/Budgets/AddTransaction.cshtml
+++ b/MyWebsite/Views/Budgets/AddTransaction.cshtml
@@ -2,9 +2,9 @@
 @model IEnumerable<MyWebsite.Models.BudgetProject.BudgetItems>
 @using MyWebsite.Models.BudgetProject
 
-@{ string user = User.Identity.Name;}
+@{ string user = User.Identity.Name; int count = 0;}
 
-@*@{var budgetList = Enum.GetValues(typeof(BudgetCategory)).OfType<BudgetCategory>().Select(m => new { Text = m.ToString(), Value = (int)m }).ToList();}*@
+
 
 <div style="text-align:center; margin-top:80px;"><p style="text-align:center;">@Html.Partial("_LoginPartial")</p></div>
 <h3 style="text-align:center; color:#cfd8dc; margin-top:100px;">Budget App</h3>
@@ -12,19 +12,24 @@
 
 
 <div class="container">
-    <h5 style="margin-top:35px; margin-bottom:25px; font-weight:bold; color:#D50000; text-align:center">Add Transaction</h5>
+    <h5 style="margin-top:55px; margin-bottom:25px; font-weight:bold; color:#cfd8dc; text-align:center">Add Transaction</h5>
+    @*Validation Errors*@
+    <div class="container" style="margin-top:20px;">
+        <p style="font-weight:bold; color:#D50000; text-align:center">@ViewBag.typeError</p>
+        <p style="font-weight:bold; color:#D50000; text-align:center">@ViewBag.costError</p>
+    </div>
     <div class="row">
         <div class="col s12 m12 l4"></div>
-        <form asp-action="AddTransaction" class="col s12 m12 l4 center" style="border: 1px solid #cfd8dc; background-color:#48575E;">
-            <div class="input-field col s12" style="background-color:#48575E; color:#D50000 !important; margin-bottom:35px; margin-top:35px;">
-                <select id="budgetTypeSelection" name="TypeOfBudget">
-                    <option value="" disabled selected>Select a Category</option>
+        <form asp-action="AddTransaction" class="col s12 m12 l4 center" style="background-color:#212121">
+            <div class="input-field col s12" style="color:#D50000 !important; margin-bottom:35px; margin-top:35px;">
+                <select name="TypeOfBudget">
+                    <option value="0" disabled selected>Select a Category</option>
                     <option value="1">Grocery</option>
                     <option value="2">Housing</option>
                     <option value="3">Bills</option>
-                    <option value="3">Entertainment</option>
-                    <option value="3">Gas</option>
-                    <option value="3">Miscellaneous</option>
+                    <option value="4">Entertainment</option>
+                    <option value="5">Gas</option>
+                    <option value="6">Miscellaneous</option>
                 </select>
             </div>
             <h5>Description</h5>
@@ -39,36 +44,158 @@
                 @Html.Hidden("Description", "Description")
                 @Html.Hidden("Cost", "Cost")
                 @Html.Hidden("TypeOfBudget", "TypeOfBudget")
-                <div style="margin-top:23px;"><input type="submit" style="cursor:pointer" value="ADD" class="grey-button"/></div>
+                <div style="margin-top:23px;"><input type="submit" style="cursor:pointer" value="ADD" class="grey-button" /></div>
             </div>
         </form>
         <div class="col s12 m12 l4"></div>
     </div>
 </div>
 
-<p>Transactions</p>
-@foreach(var item in Model.Where(x => x.Email == user))
-{
-    <p>Transaction Description: @item.Description</p>
-    <p>Item Cost: @item.Description</p>
-    <p>Budget Category: @item.TypeOfBudget</p>
-}
+<div class="container center" style="margin-top:35px; margin-bottom:150px;">
+    <a class="waves-effect waves-light btn-large sharpCorners grey darken-4" id="transaction-btnG" style="font-weight:bold; font-size:20px;"><i class="material-icons left">local_dining</i>Grocery</a>
+    <table class="table" id="transactionsG" align="center" style="display:none; width:25%; margin-bottom:25px;">
+        <tr style="border-bottom: 1px dotted #cfd8dc">
+            <th>Date</th>
+            <th>Description</th>
+            <th>Price</th>
+        </tr>
+        @foreach (var item in Model.Where(x => x.Email == user).OrderBy(x => x.Date))
+        {
+            if (Convert.ToInt32(item.TypeOfBudget) == 1)
+            {
+                <tr style="border-bottom: 1px dotted #cfd8dc">
+                    <td>@item.Date.ToString("dd/MM/yyyy")</td>
+                    <td>@item.Description</td>
+                    <td>@item.Cost</td>
+                </tr>
+            }
+        }
+    </table>
+
+    <a class="waves-effect waves-light btn-large sharpCorners grey darken-4" id="transaction-btnH" style="font-weight:bold; font-size:20px;"><i class="material-icons left">home</i>Housing</a>
+    <table class="table" id="transactionsH" align="center" style="display:none; width:25%; margin-bottom:25px;">
+        <tr style="border-bottom: 1px dotted #cfd8dc">
+            <th>Date</th>
+            <th>Description</th>
+            <th>Price</th>
+        </tr>
+        @foreach (var item in Model.Where(x => x.Email == user).OrderBy(x => x.Date))
+        {
+            if (Convert.ToInt32(item.TypeOfBudget) == 2)
+            {
+                <tr style="border-bottom: 1px dotted #cfd8dc">
+                    <td>@item.Date.ToString("dd/MM/yyyy")</td>
+                    <td>@item.Description</td>
+                    <td>@item.Cost</td>
+                </tr>
+            }
+        }
+    </table>
+
+    <a class="waves-effect waves-light btn-large sharpCorners grey darken-4" id="transaction-btnB" style="font-weight:bold; font-size:20px;"><i class="material-icons left">monetization_on</i>Bills</a>
+    <table class="table" id="transactionsB"align="center" style="display:none; width:25%; margin-bottom:25px;">
+        <tr style="border-bottom: 1px dotted #cfd8dc">
+            <th>Date</th>
+            <th>Description</th>
+            <th>Price</th>
+        </tr>
+        @foreach (var item in Model.Where(x => x.Email == user).OrderBy(x => x.Date))
+        {
+
+            if (Convert.ToInt32(item.TypeOfBudget) == 3)
+            {
+                <tr style="border-bottom: 1px dotted #cfd8dc">
+                    <td>@item.Date.ToString("dd/MM/yyyy")</td>
+                    <td>@item.Description</td>
+                    <td>@item.Cost</td>
+                </tr>
+            }
+        }
+    </table>
+
+    <a class="waves-effect waves-light btn-large sharpCorners grey darken-4" id="transaction-btnE" style="font-weight:bold; font-size:20px;"><i class="material-icons left">local_activity</i>Entertainment</a>
+    <table class="table" id="transactionsE" align="center" style="display:none; width:25%; margin-bottom:25px;">
+        <tr style="border-bottom: 1px dotted #cfd8dc">
+            <th>Date</th>
+            <th>Description</th>
+            <th>Price</th>
+        </tr>
+        @foreach (var item in Model.Where(x => x.Email == user).OrderBy(x => x.Date))
+        {
+            if (Convert.ToInt32(item.TypeOfBudget) == 4)
+            {
+                <tr style="border-bottom: 1px dotted #cfd8dc">
+                    <td>@item.Date.ToString("dd/MM/yyyy")</td>
+                    <td>@item.Description</td>
+                    <td>@item.Cost</td>
+                </tr>
+            }
+        }
+    </table>
+
+    <a class="waves-effect waves-light btn-large sharpCorners grey darken-4" id="transaction-btnGas" style="font-weight:bold; font-size:20px;"><i class="material-icons left">drive_eta</i>Gas</a>
+    <table class="table" id="transactionsGas" align="center" style="display:none; width:25%; margin-bottom:25px;">
+        <tr style="border-bottom: 1px dotted #cfd8dc">
+            <th>Date</th>
+            <th>Description</th>
+            <th>Price</th>
+        </tr>
+        @foreach (var item in Model.Where(x => x.Email == user).OrderBy(x => x.Date))
+        {
+            if (Convert.ToInt32(item.TypeOfBudget) == 5)
+            {
+                <tr style="border-bottom: 1px dotted #cfd8dc">
+                    <td>@item.Date.ToString("dd/MM/yyyy")</td>
+                    <td>@item.Description</td>
+                    <td>@item.Cost</td>
+                </tr>
+            }
+        }
+    </table>
+
+    <a class="waves-effect waves-light btn-large sharpCorners grey darken-4" id="transaction-btnM" style="font-weight:bold; font-size:20px;"><i class="material-icons left">gesture</i>Miscellaneous</a>
+    <table class="table" id="transactionsM" align="center" style="display:none; width:25%; margin-bottom:15px;">
+        <tr style="border-bottom: 1px dotted #cfd8dc">
+            <th>Date</th>
+            <th>Description</th>
+            <th>Price</th>
+        </tr>
+        @foreach (var item in Model.Where(x => x.Email == user).OrderBy(x => x.Date))
+        {
+            if (Convert.ToInt32(item.TypeOfBudget) == 6)
+            {
+                count +=1;
+                <tr style="border-bottom: 1px dotted #cfd8dc">
+                    <td>@item.Date.ToString("dd/MM/yyyy")</td>
+                    <td>@item.Description</td>
+                    <td>@item.Cost</td>
+                </tr>
+            }
+        }
+    </table>
+</div>
+
 
 <style>
 
     .dropdown-content li > a, .dropdown-content li > span {
-        color: #5C717B !important;
+        color: #cfd8dc !important;
+        font-size: 20px !important;
         font-weight: bold;
         text-align: center;
+        background-color: #212121 !important;
     }
-    
+
+    .dropdown-content li > a, .dropdown-content li > span:hover {
+        background-color: #cfd8dc !important;
+        color: #212121 !important;
+    }
+
     .select-dropdown li.disabled, .select-dropdown li.disabled > span, .select-dropdown li.optgroup {
-        color: black !important;
+        color: #76ff03 !important;
         font-weight: bold;
         text-align: center;
     }
-
-
 
     .select-wrapper input.select-dropdown {
         color: #76ff03 !important;
@@ -81,29 +208,28 @@
     }
 
     .select-wrapper input.select-dropdown:hover{
-        background-color: #5C717B !important;
-        border:none !important;
+        
+            background-color: #cfd8dc !important;
+            border: none;
+            color: #212121 !important;
     }
 
-    .grey-button {
+      .grey-button {
         border-radius: 0px;
         border: 1px solid #cfd8dc;
         color: #76ff03;
         padding: 15px;
-        background-color: #48575E;
+        background-color: #212121;
         font-weight: 400;
         font-size: 20px;
-        font-weight:bold;
+        font-weight: bold;
     }
 
     .grey-button:hover {
-        color: black !important;
-        background-color: #5C717B;
+        background-color: #cfd8dc;
         border: none;
-        color: #76ff03 !important;
+        color: #212121 !important;
     }
-
-    
 </style>
 
 <script>
@@ -111,14 +237,106 @@
         //$('.dropdown-trigger').dropdown();
         $('select').formSelect();
         //var instance = M.FormSelect.getInstance(elem);
+        Transactions();
     });
 
-    //$(function () {
-    //    $("#grocery").on('change', function () {
-    //        $('#dropdown1').val("1");
+    //Show/Hide transactions based on category
+    function Transactions() {
+        $('#transaction-btnG').on('click', function () {
+            $('#transactionsG').toggle();
+        });
+
+        $('#transaction-btnH').on('click', function () {
+            $('#transactionsH').toggle();
+        });
+
+        $('#transaction-btnB').on('click', function () {
+            $('#transactionsB').toggle();
+        });
+    
+        $('#transaction-btnE').on('click', function () {
+           $('#transactionsE').toggle();
+        });
+    
+        $('#transaction-btnGas').on('click', function () {
+           $('#transactionsGas').toggle();
+        });
+    
+        $('#transaction-btnM').on('click', function () {
+           $('#transactionsM').toggle();
+        });
+    }
+
+    
+
+    $('#transaction-btnG').click(function () {
+        var clicked = true;
+        if (clicked) {
+            $(this).css("cssText", "color: #76ff03 !important; font-weight:bold;");
+            clicked = false;
+        } else {
+            $(this).css("cssText", "color: #cfd8dc !important; font-weight:bold;");
+            clicked = true;
+        }
+    });
+
+    $('#transaction-btnH').click(function () {
+        var clicked = true;
+        if (clicked) {
+            $(this).css("cssText", "color: #76ff03 !important; font-weight:bold;");
+            clicked = false;
+        } else {
+            $(this).css("cssText", "color: #cfd8dc !important; font-weight:bold;");
+            clicked = true;
+        }
+    });
+
+    $('#transaction-btnB').click(function () {
+        var clicked = true;
+        if (clicked) {
+            $(this).css("cssText", "color: #76ff03 !important; font-weight:bold;");
+            clicked = false;
+        } else {
+            $(this).css("cssText", "color: #cfd8dc !important; font-weight:bold;");
+            clicked = true;
+        }
+    });
+
+    $('#transaction-btnE').click(function () {
+        var clicked = true;
+        if (clicked) {
+            $(this).css("cssText", "color: #76ff03 !important; font-weight:bold;");
+            clicked = false;
+        } else {
+            $(this).css("cssText", "color: #cfd8dc !important; font-weight:bold;");
+            clicked = true;
+        }
+    });
+
+    $('#transaction-btnGas').click(function () {
+        var clicked = true;
+        if (clicked) {
+            $(this).css("cssText", "color: #76ff03 !important; font-weight:bold;");
+            clicked = false;
+        } else {
+            $(this).css("cssText", "color: #cfd8dc !important; font-weight:bold;");
+            clicked = true;
+        }
+    });
+
+    $('#transaction-btnM').click(function () {
+        var clicked = true;
+        if (clicked) {
+            $(this).css("cssText", "color: #76ff03 !important; font-weight:bold;");
+            clicked = false;
+        } else {
+            $(this).css("cssText", "color: #cfd8dc !important; font-weight:bold;");
+            clicked = true;
+        }
+    });
+
+    
 </script>
-
-
 
 
 
