--- a/MyWebsite/Views/Budgets/AddTransaction.cshtml
+++ b/MyWebsite/Views/Budgets/AddTransaction.cshtml
@@ -12,7 +12,13 @@
 
 
 <div class="container">
-    <div style="margin-top:35px; text-align:center;">@Html.ActionLink("Return to Budget", "Index", "Budgets", new { userName = user }, new {@class="grey-button"})</div>
+
+    <div style="margin-top:55px; text-align:center;">
+        <a href='@Url.Action("Index", "Budgets", new { userName = user })'; class="waves-effect waves-light btn-large sharpCorners grey darken-4" style="font-weight:bold; font-size:20px;"><i class="material-icons left">arrow_back</i>Return to Budget</a>
+
+
+        @*@Html.ActionLink("Return to Budget", "Index", "Budgets", new { userName = user }, new { @class = "grey-button" })*@
+    </div>
     <h5 style="margin-top:55px; margin-bottom:25px; font-weight:bold; color:#cfd8dc; text-align:center">Add Transaction</h5>
     @*Validation Errors*@
     <div class="container" style="margin-top:20px;">
@@ -46,7 +52,7 @@
                 @Html.Hidden("Cost", "Cost")
                 @Html.Hidden("TypeOfBudget", "TypeOfBudget")
                 @Html.Hidden("Date", DateTime.Now)
-                <div style="margin-top:23px;"><input type="submit" style="cursor:pointer" value="ADD" class="grey-button" /></div>
+                <div style="margin-top:23px;"><button type="submit" class="btn-floating btn-large waves-effect waves-light;" style="background-color:#cfd8dc !important;"><i class="material-icons" style="font-weight:bold; color: #212121 !important;">add</i></button>@*<input type="submit" style="cursor:pointer" value="ADD" class="grey-button" />*@</div>
             </div>
         </form>
         <div class="col s12 m12 l4"></div>
